# ZurFur

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Justfile  ROADMAP.md  RULES.md  WORKBOARD.md  docker-compose.yml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: error.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs  tests.rs
backend/crates/api/src/middleware/: auth.rs
backend/crates/api/src/routes/: auth.rs  feeds.rs  helpers.rs  mod.rs  onboarding.rs  organizations.rs  tags.rs  users.rs
backend/crates/api/src/tests/: auth_routes.rs  feed_routes.rs  helpers.rs  mock_auth.rs  mock_feeds.rs  mock_organizations.rs  mock_tags.rs  mock_users.rs  mod.rs  onboarding_routes.rs  openapi_routes.rs  organization_routes.rs  tag_routes.rs  test_state.rs  user_routes.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: auth.rs  feed.rs  lib.rs  onboarding.rs  organization.rs  user.rs
backend/crates/application/src/auth/: login.rs  mediator.rs  mod.rs  service.rs
backend/crates/application/src/feed/: service.rs
backend/crates/application/src/onboarding/: service.rs
backend/crates/application/src/organization/: service.rs
backend/crates/application/src/tag/: service.rs
backend/crates/application/src/user/: service.rs
backend/crates/domain/: Cargo.toml
backend/crates/persistence/: Cargo.toml
backend/crates/persistence/migrations/: 20250227000001_create_users.sql  20260331000001_add_atproto_fields.sql  20260408000001_add_identity_profile.sql  20260409000001_add_feeds_onboarding.sql  20260410000001_role_enum_refactor.sql  20260412000001_schema_cleanup_and_tags.sql  20260415000001_unify_entity_kind.sql  20260416000001_add_character.sql  20260426000001_drop_tags.sql
backend/crates/persistence/src/: config.rs  lib.rs  oauth_state_store_memory.rs  pool.rs  sqlx_utils.rs
backend/crates/persistence/src/repositories/: atproto_session_repository.rs  character_repository.rs  default_role_repository.rs  entity_feed_repository.rs  entity_tag_repository.rs  feed_element_repository.rs  feed_item_repository.rs  feed_repository.rs  feed_subscription_repository.rs  mod.rs  organization_member_repository.rs  organization_profile_repository.rs  organization_repository.rs  refresh_token_repository.rs  tag_repository.rs  user_preferences_repository.rs  user_repository.rs
backend/crates/persistence/tests/: character_repository.rs  common.rs  default_role_repository.rs  entity_feed_repository.rs  entity_tag_repository.rs  feed_element_repository.rs  feed_item_repository.rs  feed_repository.rs  feed_subscription_repository.rs  migration_tests.rs  organization_member_repository.rs  organization_repository.rs  tag_repository.rs  user_preferences_repository.rs  user_repository.rs
backend/crates/shared/: Cargo.toml
design/: GLOSSARY.md  NEW_DESIGN.md  SCOPE.md  changes.md  design_document.md  domain_relationships.md  finances.md  glossary.md  inconsistencies.md  suggestions.md  summary.md  what_we_did.md
design/features/: OVERVIEW.md
design/features/01-atproto-auth/: README.md
design/features/02-identity-profile/: PHASE3_API.md  PHASE3_DESIGN.md  PHASE3_QUESTIONS.md  README.md
design/features/03-commission-engine/: README.md
design/features/03-tag-taxonomy/: README.md
design/features/03b-transactions/: README.md
design/features/04-commission-engine/: README.md
design/features/04-financial-gateway/: README.md
design/features/05-financial-gateway/: README.md
design/features/05-omnichannel-comms/: README.md
design/features/06-omnichannel-comms/: README.md
design/features/06-plugin-ecosystem/: README.md
design/features/07-community-analytics/: README.md
design/features/07-plugin-ecosystem/: README.md
design/features/08-community-analytics/: README.md
design/features/08-search-discovery/: README.md
diagrams/auth/: login.mermaid
docs/: retrospectives.md
docs/retrospectives/: retrospective-feature-3.5.md  retrospective-feature-3.md
frontend/auth/: .env.example  index.html  package.json
frontend/auth/src/: App.css  (+2 more)
nginx/: nginx.conf
(+49 files in other folders)
