[workspace]
resolver = "2"

members = ["backend/crates/*"]


exclude = ["frontend", "node_modules", "dist", ".next"]

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
thiserror = { version = "2.0.18" }
tonic = { version = "0.14.3" }
prost = { version = "0.14.3" }
tonic-prost = { version = "0.14.3" }
prost-types = { version = "0.14.3" }
axum = { version = "0.8.8" }
tonic-prost-build = { version = "0.14.3" }
async-trait = { version = "0.1.89" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "uuid", "chrono"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0" }
tower-http = { version = "0.6", features = ["cors"] }
