[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { path = "../application" }
axum = { workspace = true }
chrono = { workspace = true }
persistence = { path = "../persistence" }
serde = { workspace = true }
shared = { path = "../shared" }
tokio = { workspace = true }
