[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
atproto-identity = { version = "0.14.3", features = ["hickory-dns"] }
atproto-oauth = { version = "0.14.3", features = ["lru"] }
base64 = "0.22"
chrono = { workspace = true }
domain = { path = "../domain" }
reqwest = "0.12"
serde = { workspace = true }
sha2 = "0.10"
shared = { path = "../shared" }
thiserror = { workspace = true }
tokio = { workspace = true }
urlencoding = "2.1"
uuid = { workspace = true }
