[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
domain = { path = "../domain" }
shared = { path = "../shared" }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true, features = ["json"] }
